# Mozg

./: .gitmodules  LICENSE  README.md  pyproject.toml
.basedpyright/: baseline.json
src/: parser.py  query.py
